--- a/tools/Makefile
+++ b/tools/Makefile
@@ -2,13 +2,23 @@
 DIRS = common cfg patch reset tlk binpatch
 
 all:
+	# construct both local and dos targets
 	for i in ${DIRS}; do \
-		cd $$i && $(MAKE); \
-		cd ..; \
+		if [ -d "$$i" ]; then \
+			cd $$i; \
+			TARGET=local $(MAKE); \
+			TARGET=dos $(MAKE); \
+			cd ..; \
+		fi \
 	done
 
 clean:
+	# clean both local and dos targets
 	for i in ${DIRS}; do \
-		cd $$i && $(MAKE) clean; \
-		cd ..; \
+		if [ -d "$$i" ]; then \
+			cd $$i; \
+			TARGET=local $(MAKE) clean; \
+			TARGET=dos $(MAKE) clean; \
+			cd ..; \
+		fi \
 	done
