--- a/tools/binpatch/Makefile
+++ b/tools/binpatch/Makefile
@@ -1,5 +1,5 @@
 ROOT=../..
-include ${ROOT}/Makefile.include
+include ${ROOT}/Makefile.${TARGET}.include
 
 HEADERS=${COMMON}/File.h ${COMMON}/gendefs.h bindiff.h patchadd.h patch.h
 
@@ -12,26 +12,26 @@ ${BINPATCH_LIB}:
 
 # object files
 ${BINPATCH_LIB}/bindiff.o: bindiff.c ${HEADERS}
-	${CC} bindiff.c -o ${BINPATCH_LIB}/bindiff.o
+	$(call compile, ${BINPATCH_LIB}/bindiff.o, bindiff.c)
 
 ${BINPATCH_LIB}/binpatch.o: binpatch.c ${HEADERS}
-	${CC} binpatch.c -o ${BINPATCH_LIB}/binpatch.o
+	$(call compile, ${BINPATCH_LIB}/binpatch.o, binpatch.c)
 
 ${BINPATCH_LIB}/patch.o: patch.c patch.h
-	${CC} patch.c -o ${BINPATCH_LIB}/patch.o
+	$(call compile, ${BINPATCH_LIB}/patch.o, patch.c)
 
 ${BINPATCH_LIB}/patchadd.o: patchadd.c ${HEADERS}
-	${CC} patchadd.c -o ${BINPATCH_LIB}/patchadd.o
+	$(call compile, ${BINPATCH_LIB}/patchadd.o, patchadd.c)
 
 # binary files
 ${UTILBIN}/binpatch: ${COMMON_LIB}/File.o ${BINPATCH_LIB}/binpatch.o ${BINPATCH_LIB}/patch.o
-	${LD} -o ${UTILBIN}/binpatch ${COMMON_LIB}/File.o ${BINPATCH_LIB}/binpatch.o \
-		${BINPATCH_LIB}/patch.o
+	$(call link, ${UTILBIN}/binpatch, ${COMMON_LIB}/File.o ${BINPATCH_LIB}/binpatch.o \
+		${BINPATCH_LIB}/patch.o)
 
 ${UTILBIN}/bindiff: ${COMMON_LIB}/File.o ${BINPATCH_LIB}/bindiff.o ${BINPATCH_LIB}/patch.o \
 		${BINPATCH_LIB}/patchadd.o
-	${LD} -o ${UTILBIN}/bindiff ${COMMON_LIB}/File.o ${BINPATCH_LIB}/bindiff.o \
-		${BINPATCH_LIB}/patch.o ${BINPATCH_LIB}/patchadd.o
+	$(call link, ${UTILBIN}/bindiff, ${COMMON_LIB}/File.o ${BINPATCH_LIB}/bindiff.o \
+		${BINPATCH_LIB}/patch.o ${BINPATCH_LIB}/patchadd.o)
 
 # clean
 clean:
