--- a/tools/tlk/Makefile
+++ b/tools/tlk/Makefile
@@ -1,6 +1,6 @@
 # Makefile for TLK proggies
 ROOT=../..
-include ${ROOT}/Makefile.include
+include ${ROOT}/Makefile.${TARGET}.include
 
 
 all: mkdirs ${U2BIN}/viewtlk
@@ -13,28 +13,27 @@ ${TLK_LIB}:
 
 # object files
 ${TLK_LIB}/tlkio.o: tlkio.c tlklib.h
-	${CC} tlkio.c -o ${TLK_LIB}/tlkio.o
+	$(call compile, ${TLK_LIB}/tlkio.o, tlkio.c)
 
 ${TLK_LIB}/tlklib.o: tlklib.c tlklib.h
-	${CC} tlklib.c -o ${TLK_LIB}/tlklib.o
+	$(call compile, ${TLK_LIB}/tlklib.o, tlklib.c)
 
 ${TLK_LIB}/tlkfile.o: tlkfile.c tlklib.h ${COMMON}/File.h
-	${CC} tlkfile.c -o ${TLK_LIB}/tlkfile.o
+	$(call compile, ${TLK_LIB}/tlkfile.o, tlkfile.c)
 
 ${TLK_LIB}/viewtlk.o: viewtlk.c viewtlk.h ${COMMON}/File.h
-	${CC} viewtlk.c -o ${TLK_LIB}/viewtlk.o
+	$(call compile, ${TLK_LIB}/viewtlk.o, viewtlk.c)
 
 
 # library files
 ${TLK_LIB}/tlklib.a: ${TLK_LIB}/tlkfile.o ${TLK_LIB}/tlklib.o ${TLK_LIB}/tlkio.o
-	${AR} -r ${TLK_LIB}/tlklib.a ${TLK_LIB}/tlkfile.o ${TLK_LIB}/tlklib.o \
-		${TLK_LIB}/tlkio.o
+	$(call archive, ${TLK_LIB}/tlklib.a, ${TLK_LIB}/tlkfile.o ${TLK_LIB}/tlklib.o \
+		${TLK_LIB}/tlkio.o)
 
 
 # binary files
 ${U2BIN}/viewtlk: ${TLK_LIB}/viewtlk.o ${TLK_LIB}/tlklib.a ${COMMON_LIB}/File.o
-	${LD} ${TLK_LIB}/viewtlk.o ${TLK_LIB}/tlklib.a ${COMMON_LIB}/File.o \
-		-o ${U2BIN}/viewtlk
+	$(call link, ${U2BIN}/viewtlk, ${TLK_LIB}/viewtlk.o ${TLK_LIB}/tlklib.a ${COMMON_LIB}/File.o)
 
 # clean
 clean:
