--- a/tools/cfg/Makefile
+++ b/tools/cfg/Makefile
@@ -1,5 +1,5 @@
 ROOT=../..
-include ${ROOT}/Makefile.include
+include ${ROOT}/Makefile.${TARGET}.include
 
 all: mkdirs ${U2BIN}/u2cfg ${U3BIN}/u3cfg ${U5BIN}/u5cfg
 
@@ -10,29 +10,26 @@ ${CFG_LIB}:
 
 # object files
 ${CFG_LIB}/u2cfg.o: u2cfg.c u2cfg.h cfg.h ${COMMON}/gendefs.h ${COMMON}/File.h
-	${CC} u2cfg.c -o ${CFG_LIB}/u2cfg.o
+	$(call compile, ${CFG_LIB}/u2cfg.o, u2cfg.c)
 
 ${CFG_LIB}/u3cfg.o: u3cfg.c u3cfg.h cfg.h ${COMMON}/gendefs.h ${COMMON}/File.h
-	${CC} u3cfg.c -o ${CFG_LIB}/u3cfg.o
+	$(call compile, ${CFG_LIB}/u3cfg.o, u3cfg.c)
 
 ${CFG_LIB}/u5cfg.o: u5cfg.c u5cfg.h cfg.h ${COMMON}/gendefs.h ${COMMON}/File.h
-	${CC} u5cfg.c -o ${CFG_LIB}/u5cfg.o
+	$(call compile, ${CFG_LIB}/u5cfg.o, u5cfg.c)
 
 ${CFG_LIB}/status.o: status.c cfg.h ${COMMON}/gendefs.h ${COMMON}/File.h
-	${CC} status.c -o ${CFG_LIB}/status.o
+	$(call compile, ${CFG_LIB}/status.o, status.c)
 
 # binary files
 ${U2BIN}/u2cfg: ${CFG_LIB}/u2cfg.o ${CFG_LIB}/status.o ${COMMON_LIB}/File.o
-	${LD} ${CFG_LIB}/u2cfg.o ${CFG_LIB}/status.o ${COMMON_LIB}/File.o \
-		-o ${U2BIN}/u2cfg
+	$(call link, ${U2BIN}/u2cfg, ${CFG_LIB}/u2cfg.o ${CFG_LIB}/status.o ${COMMON_LIB}/File.o)
 
 ${U3BIN}/u3cfg: ${CFG_LIB}/u3cfg.o ${CFG_LIB}/status.o ${COMMON_LIB}/File.o
-	${LD} ${CFG_LIB}/u3cfg.o ${CFG_LIB}/status.o ${COMMON_LIB}/File.o \
-		-o ${U3BIN}/u3cfg
+	$(call link, ${U3BIN}/u3cfg, ${CFG_LIB}/u3cfg.o ${CFG_LIB}/status.o ${COMMON_LIB}/File.o)
 
 ${U5BIN}/u5cfg: ${CFG_LIB}/u5cfg.o ${CFG_LIB}/status.o ${COMMON_LIB}/File.o
-	${LD} ${CFG_LIB}/u5cfg.o ${CFG_LIB}/status.o ${COMMON_LIB}/File.o \
-		-o ${U5BIN}/u5cfg
+	$(call link, ${U5BIN}/u5cfg, ${CFG_LIB}/u5cfg.o ${CFG_LIB}/status.o ${COMMON_LIB}/File.o)
 
 # clean
 clean:
