--- a/tools/reset/Makefile
+++ b/tools/reset/Makefile
@@ -1,6 +1,6 @@
 # Makefile for reset proggies
 ROOT=../..
-include ${ROOT}/Makefile.include
+include ${ROOT}/Makefile.${TARGET}.include
 
 all: mkdirs ${U2BIN}/u2reset ${U3BIN}/u3reset
 
@@ -11,35 +11,33 @@ ${RESET_LIB}:
 
 # object files
 ${RESET_LIB}/fileutil.o: fileutil.c fileutil.h ${COMMON}/File.h
-	${CC} fileutil.c -o ${RESET_LIB}/fileutil.o
+	$(call compile, ${RESET_LIB}/fileutil.o, fileutil.c)
 
 ${RESET_LIB}/u2reset.o: u2reset.c u2reset.h ${COMMON}/File.h
-	${CC} u2reset.c -o ${RESET_LIB}/u2reset.o
+	$(call compile, ${RESET_LIB}/u2reset.o, u2reset.c)
 
 ${RESET_LIB}/u2tools.o: u2tools.c u2reset.h u2defs.h ${COMMON}/File.h
-	${CC} u2tools.c -o ${RESET_LIB}/u2tools.o
+	$(call compile, ${RESET_LIB}/u2tools.o, u2tools.c)
 
 ${RESET_LIB}/u2predef.o: u2predef.c u2reset.h u2predef.h ${COMMON}/File.h
-	${CC} u2predef.c -o ${RESET_LIB}/u2predef.o
+	$(call compile, ${RESET_LIB}/u2predef.o, u2predef.c)
 
 ${RESET_LIB}/u3reset.o: u3reset.c u3reset.h ${COMMON}/File.h
-	${CC} u3reset.c -o ${RESET_LIB}/u3reset.o
+	$(call compile, ${RESET_LIB}/u3reset.o, u3reset.c)
 
 ${RESET_LIB}/u3tools.o: u3tools.c u3reset.h u3defs.h ${COMMON}/File.h
-	${CC} u3tools.c -o ${RESET_LIB}/u3tools.o
+	$(call compile, ${RESET_LIB}/u3tools.o, u3tools.c)
 
 # binary files
 ${U2BIN}/u2reset: ${RESET_LIB}/fileutil.o ${RESET_LIB}/u2reset.o \
 		${RESET_LIB}/u2tools.o ${RESET_LIB}/u2predef.o ${COMMON_LIB}/File.o
-	${LD} ${RESET_LIB}/fileutil.o ${RESET_LIB}/u2reset.o \
-		${RESET_LIB}/u2tools.o ${RESET_LIB}/u2predef.o ${COMMON_LIB}/File.o \
-		-o ${U2BIN}/u2reset
+	$(call link, ${U2BIN}/u2reset, ${RESET_LIB}/fileutil.o ${RESET_LIB}/u2reset.o \
+		${RESET_LIB}/u2tools.o ${RESET_LIB}/u2predef.o ${COMMON_LIB}/File.o)
 
 ${U3BIN}/u3reset: ${RESET_LIB}/fileutil.o ${RESET_LIB}/u3reset.o \
 		${RESET_LIB}/u3tools.o ${COMMON_LIB}/File.o
-	${LD} ${RESET_LIB}/fileutil.o ${RESET_LIB}/u3reset.o \
-		${RESET_LIB}/u3tools.o ${COMMON_LIB}/File.o \
-		-o ${U3BIN}/u3reset
+	$(call link, ${U3BIN}/u3reset, ${RESET_LIB}/fileutil.o ${RESET_LIB}/u3reset.o \
+		${RESET_LIB}/u3tools.o ${COMMON_LIB}/File.o)
 
 # clean
 clean:
