--- a/tools/binpatch/Makefile
+++ b/tools/binpatch/Makefile
@@ -1,9 +1,9 @@
 ROOT=../..
-include ${ROOT}/Makefile.${TARGET}.include
+include ${ROOT}/Makefile.include
 
-HEADERS=${COMMON}/File.h ${COMMON}/gendefs.h bindiff.h patchadd.h patch.h
+HEADERS=${COMMON}/File.h ${COMMON}/gendefs.h patchadd.h patch.h
 
-all: mkdirs ${UTILBIN}/bindiff ${UTILBIN}/binpatch
+compile: mkdirs ${UTILBIN}/bindiff ${UTILBIN}/binpat ${UTILBIN}/binunpat
 
 mkdirs: ${BINPATCH_LIB} ${UTILBIN}
 
@@ -11,11 +11,14 @@ ${BINPATCH_LIB}:
 	mkdir -p ${BINPATCH_LIB}
 
 # object files
-${BINPATCH_LIB}/bindiff.o: bindiff.c ${HEADERS}
+${BINPATCH_LIB}/bindiff.o: bindiff.c bindiff.h ${HEADERS}
 	$(call compile, ${BINPATCH_LIB}/bindiff.o, bindiff.c)
 
-${BINPATCH_LIB}/binpatch.o: binpatch.c ${HEADERS}
+${BINPATCH_LIB}/binpatch.o: binpatch.c binpatch.h ${HEADERS}
 	$(call compile, ${BINPATCH_LIB}/binpatch.o, binpatch.c)
+
+${BINPATCH_LIB}/binunpatch.o: binunpatch.c binunpatch.h ${HEADERS}
+	$(call compile, ${BINPATCH_LIB}/binunpatch.o, binunpatch.c)
 
 ${BINPATCH_LIB}/patch.o: patch.c patch.h
 	$(call compile, ${BINPATCH_LIB}/patch.o, patch.c)
@@ -24,8 +27,13 @@ ${BINPATCH_LIB}/patchadd.o: patchadd.c ${HEADERS}
 	$(call compile, ${BINPATCH_LIB}/patchadd.o, patchadd.c)
 
 # binary files
-${UTILBIN}/binpatch: ${COMMON_LIB}/File.o ${BINPATCH_LIB}/binpatch.o ${BINPATCH_LIB}/patch.o
-	$(call link, ${UTILBIN}/binpatch, ${COMMON_LIB}/File.o ${BINPATCH_LIB}/binpatch.o \
+# NOTE: Windows 7 requires Admin rights to 'binpatch.exe'. But 'binpat.exe' is okay.  (WTF?!)
+${UTILBIN}/binpat: ${COMMON_LIB}/File.o ${BINPATCH_LIB}/binpatch.o ${BINPATCH_LIB}/patch.o
+	$(call link, ${UTILBIN}/binpat, ${COMMON_LIB}/File.o ${BINPATCH_LIB}/binpatch.o \
+		${BINPATCH_LIB}/patch.o)
+
+${UTILBIN}/binunpat: ${COMMON_LIB}/File.o ${BINPATCH_LIB}/binunpatch.o ${BINPATCH_LIB}/patch.o
+	$(call link, ${UTILBIN}/binunpat, ${COMMON_LIB}/File.o ${BINPATCH_LIB}/binunpatch.o \
 		${BINPATCH_LIB}/patch.o)
 
 ${UTILBIN}/bindiff: ${COMMON_LIB}/File.o ${BINPATCH_LIB}/bindiff.o ${BINPATCH_LIB}/patch.o \
@@ -37,4 +45,20 @@ ${UTILBIN}/bindiff: ${COMMON_LIB}/File.o ${BINPATCH_LIB}/bindiff.o ${BINPATCH_LI
 clean:
 	rm ${BINPATCH_LIB}/*.o
 	rm ${UTILBIN}/bindiff
-	rm ${UTILBIN}/binpatch
+	rm ${UTILBIN}/binpat
+	rm ${UTILBIN}/binunpat
+
+# package
+package: package_u2 package_u3 package_u5
+
+package_u2: ${UTILBIN}/binpat ${UTILBIN}/binunpat
+	cp -f ${UTILBIN}/binpat ${U2PKG}
+	cp -f ${UTILBIN}/binunpat ${U2PKG}
+
+package_u3: ${UTILBIN}/binpat ${UTILBIN}/binunpat
+	cp -f ${UTILBIN}/binpat ${U3PKG}
+	cp -f ${UTILBIN}/binunpat ${U3PKG}
+
+package_u5: ${UTILBIN}/binpat ${UTILBIN}/binunpat
+	cp -f ${UTILBIN}/binpat ${U5PKG}
+	cp -f ${UTILBIN}/binunpat ${U5PKG}
