re-generated patch binaries and updated Makefile

--- a/patches/Makefile
+++ b/patches/Makefile
@@ -9,6 +9,9 @@ U5PAT = ${PATCHES}/u5up-$(call stripdots,${U5VER}).pat
 
 all: package
 
+clean:
+	rm -f ${U2PAT} ${U3PAT} ${U5PAT}
+
 ### patch build targets ###
 
 patch: ${U2PAT} ${U3PAT} ${U5PAT}
@@ -20,25 +23,25 @@ patch_u3: ${U3PAT}
 patch_u5: ${U5PAT}
 
 ${U2PAT}:
-	${DIFF} -o ${U2ORIGINAL}/ULTIMAII.EXE -n ${U2UPGRADE}/ULTIMAII.EXE -p ${U2PAT}
-	${DIFF} -o ${U2ORIGINAL}/MAPX10 -n ${U2UPGRADE}/MAPX10 -p ${U2PAT}
-	${DIFF} -o ${U2ORIGINAL}/MAPX15 -n ${U2UPGRADE}/MAPX15 -p ${U2PAT}
+	${DIFF} -s 3 -o ${U2ORIGINAL}/ULTIMAII.EXE -n ${U2UPGRADE}/ULTIMAII.EXE -p ${U2PAT}
+	${DIFF} -s 3 -o ${U2ORIGINAL}/MAPX10 -n ${U2UPGRADE}/MAPX10 -p ${U2PAT}
+	${DIFF} -s 3 -o ${U2ORIGINAL}/MAPX15 -n ${U2UPGRADE}/MAPX15 -p ${U2PAT}
 
 ${U3PAT}:
-	${DIFF} -o ${U3ORIGINAL}/ULTIMA.COM -n ${U3UPGRADE}/ULTIMA.COM -p ${U3PAT}
-	${DIFF} -o ${U3ORIGINAL}/BOOTUP.BIN -n ${U3UPGRADE}/BOOTUP.BIN -p ${U3PAT}
-	${DIFF} -o ${U3ORIGINAL}/EXODUS.BIN -n ${U3UPGRADE}/EXODUS.BIN -p ${U3PAT}
-	${DIFF} -o ${U3ORIGINAL}/DUNGEON.DAT -n ${U3UPGRADE}/DUNGEON.DAT -p ${U3PAT}
+	${DIFF} -s 3 -o ${U3ORIGINAL}/ULTIMA.COM -n ${U3UPGRADE}/ULTIMA.COM -p ${U3PAT}
+	${DIFF} -s 3 -o ${U3ORIGINAL}/BOOTUP.BIN -n ${U3UPGRADE}/BOOTUP.BIN -p ${U3PAT}
+	${DIFF} -s 3 -o ${U3ORIGINAL}/EXODUS.BIN -n ${U3UPGRADE}/EXODUS.BIN -p ${U3PAT}
+	${DIFF} -s 3 -o ${U3ORIGINAL}/DUNGEON.DAT -n ${U3UPGRADE}/DUNGEON.DAT -p ${U3PAT}
 
 ${U5PAT}:
-	${DIFF} -o ${U5ORIGINAL}/ULTIMA.EXE -n ${U5UPGRADE}/ULTIMA.EXE -p ${U5PAT}
-	${DIFF} -o ${U5ORIGINAL}/INTRO.OVL -n ${U5UPGRADE}/INTRO.OVL -p ${U5PAT}
-	${DIFF} -o ${U5ORIGINAL}/MAINOUT.OVL -n ${U5UPGRADE}/MAINOUT.OVL -p ${U5PAT}
-	${DIFF} -o ${U5ORIGINAL}/TOWN.OVL -n ${U5UPGRADE}/TOWN.OVL -p ${U5PAT}
-	${DIFF} -o ${U5ORIGINAL}/DUNGEON.OVL -n ${U5UPGRADE}/DUNGEON.OVL -p ${U5PAT}
-	${DIFF} -o ${U5ORIGINAL}/ENDGAME.OVL -n ${U5UPGRADE}/ENDGAME.OVL -p ${U5PAT}
-	${DIFF} -o ${U5ORIGINAL}/FONT.OVL -n ${U5UPGRADE}/FONT.OVL -p ${U5PAT}
-	${DIFF} -o ${U5ORIGINAL}/DATA.OVL -n ${U5UPGRADE}/DATA.OVL -p ${U5PAT}
+	${DIFF} -s 3 -o ${U5ORIGINAL}/ULTIMA.EXE -n ${U5UPGRADE}/ULTIMA.EXE -p ${U5PAT}
+	${DIFF} -s 3 -o ${U5ORIGINAL}/INTRO.OVL -n ${U5UPGRADE}/INTRO.OVL -p ${U5PAT}
+	${DIFF} -s 3 -o ${U5ORIGINAL}/MAINOUT.OVL -n ${U5UPGRADE}/MAINOUT.OVL -p ${U5PAT}
+	${DIFF} -s 3 -o ${U5ORIGINAL}/TOWN.OVL -n ${U5UPGRADE}/TOWN.OVL -p ${U5PAT}
+	${DIFF} -s 3 -o ${U5ORIGINAL}/DUNGEON.OVL -n ${U5UPGRADE}/DUNGEON.OVL -p ${U5PAT}
+	${DIFF} -s 3 -o ${U5ORIGINAL}/ENDGAME.OVL -n ${U5UPGRADE}/ENDGAME.OVL -p ${U5PAT}
+	${DIFF} -s 3 -o ${U5ORIGINAL}/FONT.OVL -n ${U5UPGRADE}/FONT.OVL -p ${U5PAT}
+	${DIFF} -s 3 -o ${U5ORIGINAL}/DATA.OVL -n ${U5UPGRADE}/DATA.OVL -p ${U5PAT}
 
 ### package build targets ###
 
@@ -55,3 +58,17 @@ package_u3: ${U3PAT}
 package_u5: ${U5PAT}
 	echo "Packaging Patches for U5"
 	cp -f ${U5PAT} ${U5PKG}
+
+
+### apply patch targets ###
+
+apply_patch: apply_patch_u2 apply_patch_u3 apply_patch_u5
+
+apply_patch_u2:
+	${PATCH} -d ${U2UPGRADE} ${U2PAT}
+
+apply_patch_u3:
+	${PATCH} -d ${U3UPGRADE} ${U3PAT}
+
+apply_patch_u5:
+	${PATCH} -d ${U5UPGRADE} ${U5PAT}
