--- a/asm/u3drv/Makefile
+++ b/asm/u3drv/Makefile
@@ -1,30 +1,28 @@
 ROOT=../..
 include ${ROOT}/Makefile.include
 
-compile: mkdirs ${U3BIN}/cga.drv ${U3BIN}/cgacomp.drv ${U3BIN}/ega.drv ${U3BIN}/vga.drv \
+compile: ${U3BIN}/cga.drv ${U3BIN}/cgacomp.drv ${U3BIN}/ega.drv ${U3BIN}/vga.drv \
         ${U3BIN}/midpak.drv ${U3BIN}/nomidi.drv
-
-mkdirs: ${U3BIN}
 
 VIDDEPS=vidjmp.asm vidfile.asm vidfar.asm ../common/loadfile.asm \
     ../common/xchgs.asm ../common/memory.asm
 
-${U3BIN}/cga.drv: cga.asm cgacore.asm ${VIDDEPS}
+${U3BIN}/cga.drv: cga.asm cgacore.asm ${VIDDEPS} | ${U3BIN}
 	${ASM} cga.asm ${U3BIN}/cga.drv
 
-${U3BIN}/cgacomp.drv: cgacomp.asm cgacore.asm ${VIDDEPS} palette.asm
+${U3BIN}/cgacomp.drv: cgacomp.asm cgacore.asm ${VIDDEPS} palette.asm | ${U3BIN}
 	${ASM} cgacomp.asm ${U3BIN}/cgacomp.drv
 
-${U3BIN}/ega.drv: ega.asm ${VIDDEPS}
+${U3BIN}/ega.drv: ega.asm ${VIDDEPS} | ${U3BIN}
 	${ASM} ega.asm ${U3BIN}/ega.drv
 
-${U3BIN}/vga.drv: vga.asm ${VIDDEPS} palette.asm
+${U3BIN}/vga.drv: vga.asm ${VIDDEPS} palette.asm | ${U3BIN}
 	${ASM} vga.asm ${U3BIN}/vga.drv
 
-${U3BIN}/midpak.drv: midpak.asm
+${U3BIN}/midpak.drv: midpak.asm | ${U3BIN}
 	${ASM} midpak.asm ${U3BIN}/midpak.drv
 
-${U3BIN}/nomidi.drv: nomidi.asm
+${U3BIN}/nomidi.drv: nomidi.asm | ${U3BIN}
 	${ASM} nomidi.asm ${U3BIN}/nomidi.drv
 
 clean:
