--- a/ext/Makefile
+++ b/ext/Makefile
@@ -6,14 +6,17 @@ all: package
 
 ### package build targets ###
 
-package: package_u3 package_u5
+package: package_u2 package_u3 package_u5
+
+package_u2:
+	### No DMKit for U2
 
 package_u3: ${DMKIT}
-	echo "Packaging DMKit for U3"
+	### Packaging DMKit for U3
 	cp -f ${DMKIT}/*.ADV ${DMKIT}/*.ADD ${DMKIT}/*MIDPAK.COM ${DMKIT}/SETM.EXE ${DMKIT}/FAT.OPL ${U3PKG}
 
 package_u5: ${DMKIT}
-	echo "Packaging DMKit for U5"
+	### Packaging DMKit for U5
 	cp -f ${DMKIT}/*.ADV ${DMKIT}/*.ADD ${DMKIT}/*MIDPAK.COM ${DMKIT}/SETM.EXE ${DMKIT}/FAT.OPL ${U5PKG}
 
 ${DMKIT}: ${EXT}/dmkit-1.50.zip
