--- a/tools/binpatch/Makefile
+++ b/tools/binpatch/Makefile
@@ -3,41 +3,39 @@ include ${ROOT}/Makefile.include
 
 HEADERS=${COMMON}/File.h ${COMMON}/gendefs.h patchadd.h patch.h
 
-compile: mkdirs ${UTILBIN}/bindiff ${UTILBIN}/binpat ${UTILBIN}/binunpat
-
-mkdirs: ${BINPATCH_LIB} ${UTILBIN}
+compile: ${UTILBIN}/bindiff ${UTILBIN}/binpat ${UTILBIN}/binunpat
 
 ${BINPATCH_LIB}:
 	mkdir -p ${BINPATCH_LIB}
 
 # object files
-${BINPATCH_LIB}/bindiff.o: bindiff.c bindiff.h ${HEADERS}
+${BINPATCH_LIB}/bindiff.o: bindiff.c bindiff.h ${HEADERS} | ${BINPATCH_LIB}
 	$(call compile, ${BINPATCH_LIB}/bindiff.o, bindiff.c)
 
-${BINPATCH_LIB}/binpatch.o: binpatch.c binpatch.h ${HEADERS}
+${BINPATCH_LIB}/binpatch.o: binpatch.c binpatch.h ${HEADERS} | ${BINPATCH_LIB}
 	$(call compile, ${BINPATCH_LIB}/binpatch.o, binpatch.c)
 
-${BINPATCH_LIB}/binunpatch.o: binunpatch.c binunpatch.h ${HEADERS}
+${BINPATCH_LIB}/binunpatch.o: binunpatch.c binunpatch.h ${HEADERS} | ${BINPATCH_LIB}
 	$(call compile, ${BINPATCH_LIB}/binunpatch.o, binunpatch.c)
 
-${BINPATCH_LIB}/patch.o: patch.c patch.h
+${BINPATCH_LIB}/patch.o: patch.c patch.h | ${BINPATCH_LIB}
 	$(call compile, ${BINPATCH_LIB}/patch.o, patch.c)
 
-${BINPATCH_LIB}/patchadd.o: patchadd.c ${HEADERS}
+${BINPATCH_LIB}/patchadd.o: patchadd.c ${HEADERS} | ${BINPATCH_LIB}
 	$(call compile, ${BINPATCH_LIB}/patchadd.o, patchadd.c)
 
 # binary files
 # NOTE: Windows 7 requires Admin rights to 'binpatch.exe'. But 'binpat.exe' is okay.  (WTF?!)
-${UTILBIN}/binpat: ${COMMON_LIB}/File.o ${BINPATCH_LIB}/binpatch.o ${BINPATCH_LIB}/patch.o
+${UTILBIN}/binpat: ${COMMON_LIB}/File.o ${BINPATCH_LIB}/binpatch.o ${BINPATCH_LIB}/patch.o | ${UTILBIN}
 	$(call link, ${UTILBIN}/binpat, ${COMMON_LIB}/File.o ${BINPATCH_LIB}/binpatch.o \
 		${BINPATCH_LIB}/patch.o)
 
-${UTILBIN}/binunpat: ${COMMON_LIB}/File.o ${BINPATCH_LIB}/binunpatch.o ${BINPATCH_LIB}/patch.o
+${UTILBIN}/binunpat: ${COMMON_LIB}/File.o ${BINPATCH_LIB}/binunpatch.o ${BINPATCH_LIB}/patch.o | ${UTILBIN}
 	$(call link, ${UTILBIN}/binunpat, ${COMMON_LIB}/File.o ${BINPATCH_LIB}/binunpatch.o \
 		${BINPATCH_LIB}/patch.o)
 
 ${UTILBIN}/bindiff: ${COMMON_LIB}/File.o ${BINPATCH_LIB}/bindiff.o ${BINPATCH_LIB}/patch.o \
-		${BINPATCH_LIB}/patchadd.o
+		${BINPATCH_LIB}/patchadd.o | ${UTILBIN}
 	$(call link, ${UTILBIN}/bindiff, ${COMMON_LIB}/File.o ${BINPATCH_LIB}/bindiff.o \
 		${BINPATCH_LIB}/patch.o ${BINPATCH_LIB}/patchadd.o)
 
