--- a/tools/common/Makefile
+++ b/tools/common/Makefile
@@ -1,15 +1,13 @@
 ROOT=../..
 include ${ROOT}/Makefile.include
 
-compile: mkdirs ${COMMON_LIB}/File.o
-
-mkdirs: ${COMMON_LIB}
+compile: ${COMMON_LIB}/File.o
 
 ${COMMON_LIB}:
 	mkdir -p ${COMMON_LIB}
 
 # object files
-${COMMON_LIB}/File.o: File.c File.h gendefs.h
+${COMMON_LIB}/File.o: File.c File.h gendefs.h | ${COMMON_LIB}
 	$(call compile, ${COMMON_LIB}/File.o, File.c)
 
 # clean
