--- a/patches/Makefile
+++ b/patches/Makefile
@@ -22,18 +22,23 @@ patch_u3: ${U3PAT}
 
 patch_u5: ${U5PAT}
 
-${U2PAT}:
+${U2PAT}: ${U2UPGRADE}/ULTIMAII.EXE ${U2UPGRADE}/U2EGA.EXE ${U2UPGRADE}/MAPX10 ${U2UPGRADE}/MAPX15
+	rm -f ${U2PAT}
+	${DIFF} -s 3 -o ${U2ORIGINAL}/ULTIMAII.EXE -n ${U2UPGRADE}/U2EGA.EXE -p ${U2PAT} -u
 	${DIFF} -s 3 -o ${U2ORIGINAL}/ULTIMAII.EXE -n ${U2UPGRADE}/ULTIMAII.EXE -p ${U2PAT}
 	${DIFF} -s 3 -o ${U2ORIGINAL}/MAPX10 -n ${U2UPGRADE}/MAPX10 -p ${U2PAT}
 	${DIFF} -s 3 -o ${U2ORIGINAL}/MAPX15 -n ${U2UPGRADE}/MAPX15 -p ${U2PAT}
 
-${U3PAT}:
+${U3PAT}: ${U3UPGRADE}/ULTIMA.COM ${U3UPGRADE}/BOOTUP.BIN ${U3UPGRADE}/EXODUS.BIN ${U3UPGRADE}/DUNGEON.DAT
+	rm -f ${U3PAT}
 	${DIFF} -s 3 -o ${U3ORIGINAL}/ULTIMA.COM -n ${U3UPGRADE}/ULTIMA.COM -p ${U3PAT}
 	${DIFF} -s 3 -o ${U3ORIGINAL}/BOOTUP.BIN -n ${U3UPGRADE}/BOOTUP.BIN -p ${U3PAT}
 	${DIFF} -s 3 -o ${U3ORIGINAL}/EXODUS.BIN -n ${U3UPGRADE}/EXODUS.BIN -p ${U3PAT}
 	${DIFF} -s 3 -o ${U3ORIGINAL}/DUNGEON.DAT -n ${U3UPGRADE}/DUNGEON.DAT -p ${U3PAT}
 
-${U5PAT}:
+${U5PAT}: ${U5UPGRADE}/ULTIMA.EXE ${U5UPGRADE}/INTRO.OVL ${U5UPGRADE}/MAINOUT.OVL ${U5UPGRADE}/TOWN.OVL \
+        ${U5UPGRADE}/DUNGEON.OVL ${U5UPGRADE}/ENDGAME.OVL ${U5UPGRADE}/FONT.OVL ${U5UPGRADE}/DATA.OVL
+	rm -f ${U5PAT}
 	${DIFF} -s 3 -o ${U5ORIGINAL}/ULTIMA.EXE -n ${U5UPGRADE}/ULTIMA.EXE -p ${U5PAT}
 	${DIFF} -s 3 -o ${U5ORIGINAL}/INTRO.OVL -n ${U5UPGRADE}/INTRO.OVL -p ${U5PAT}
 	${DIFF} -s 3 -o ${U5ORIGINAL}/MAINOUT.OVL -n ${U5UPGRADE}/MAINOUT.OVL -p ${U5PAT}
