include SETM.XMI in the package

--- a/ext/Makefile
+++ b/ext/Makefile
@@ -13,11 +13,11 @@ package_u2:
 
 package_u3: ${DMKIT}
 	### Packaging DMKit for U3
-	cp -f ${DMKIT}/*.ADV ${DMKIT}/*.ADD ${DMKIT}/*MIDPAK.COM ${DMKIT}/SETM.EXE ${DMKIT}/FAT.OPL ${U3PKG}
+	cp -f ${DMKIT}/*.ADV ${DMKIT}/*.ADD ${DMKIT}/*MIDPAK.COM ${DMKIT}/SETM.EXE ${DMKIT}/SETM.XMI ${DMKIT}/FAT.OPL ${U3PKG}
 
 package_u5: ${DMKIT}
 	### Packaging DMKit for U5
-	cp -f ${DMKIT}/*.ADV ${DMKIT}/*.ADD ${DMKIT}/*MIDPAK.COM ${DMKIT}/SETM.EXE ${DMKIT}/FAT.OPL ${U5PKG}
+	cp -f ${DMKIT}/*.ADV ${DMKIT}/*.ADD ${DMKIT}/*MIDPAK.COM ${DMKIT}/SETM.EXE ${DMKIT}/SETM.XMI ${DMKIT}/FAT.OPL ${U5PKG}
 
 ${DMKIT}: ${EXT}/dmkit-1.50.zip
 	mkdir -p ${DMKIT}
