--- a/tools/Makefile
+++ b/tools/Makefile
@@ -8,6 +8,8 @@ DIRS = common cfg patch reset tlk binpatch
 			cd $$i; \
 			TARGET=local $(MAKE) $@; \
 			TARGET=dos $(MAKE) $@; \
+			TARGET=winnt $(MAKE) $@; \
+			TARGET=linux $(MAKE) $@; \
 			cd ..; \
 		fi \
 	done
@@ -18,6 +20,8 @@ package%: FORCE
 		if [ -d "$$i" ]; then \
 			cd $$i; \
 			TARGET=dos $(MAKE) $@; \
+			TARGET=winnt $(MAKE) $@; \
+			TARGET=linux $(MAKE) $@; \
 			cd ..; \
 		fi \
 	done
